# docs/swagger.yaml
@@ -738,6 +738,48 @@ paths:
       summary: Test Token
       tags:
       - Auth
+  /api/upload:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Uploads a PDF file, extracts its text, and saves the extracted
+        text
+      parameters:
+      - description: PDF file
+        in: formData
+        name: pdf
+        required: true
+        type: file
+      - default: Bearer <token>
+        description: Auth Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Upload a PDF file and extract text
+      tags:
+      - PDF
   /api/user:
     post:
       consumes:
@@ -917,42 +959,6 @@ paths:
       summary: Criar token de auth
       tags:
       - Auth
-  /upload:
-    post:
-      consumes:
-      - multipart/form-data
-      description: Uploads a PDF file, extracts its text, and saves the extracted
-        text
-      parameters:
-      - description: PDF file
-        in: formData
-        name: pdf
-        required: true
-        type: file
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Upload a PDF file and extract text
-      tags:
-      - PDF
 securityDefinitions:
   BasicAuth:
     type: basic
